# flask-tutorial

./: .gitignore  Procfile  config.py  pyproject.toml  requirements.txt  setup.py
flaskr/: __init__.py  auth.py  blog.py  db.py  models.py
migrations/versions/: 2f3d1b6f2c1c_.py
tests/: test_auth.py  test_blog.py
