[tool.poetry]
name = "flask-tutorial"
version = "0.1.0"
description = ""
authors = ["ancalita <27920906+ancalita@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "flask_tutorial"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.3"
flask-migrate = "^4.0.4"
gunicorn = "^20.1.0"
autoenv = "^1.0.0"
python-dateutil = "^2.8.2"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
